--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link js-scroll" href="#service">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Work</a>
+            <a class="nav-link js-scroll" href="#work">Hobbies</a>
           </li>
           <!--li class="nav-item">
             <a class="nav-link js-scroll" href="#blog">Blog</a>
