--- a/index.html
+++ b/index.html
@@ -150,10 +150,8 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.<BR><BR>
+                    I am from Chennai.I am persuing IT 4 th Year RMK ENGG College.I scored 87% in 10 th & 86 % in 12 th both in state board.
+                    I working in Cognizant as an intern upto March <BR><BR>
                   </p>
                   <div class="title-box-2">
                     <h5 class="title-left">
